[package]
name = "mogrify_derive"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Thomas Alton"]
description = "Backing macros for the mogrify package"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0"}
